David #1148 - Fixing the event banner icon's width on IE

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_eventbanner.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_eventbanner.scss
@@ -118,6 +118,9 @@
 
         .event-banner-container {
             height: 100%;
+            .eventbanner-icon{
+                width:100%;
+            }
         }
     }
 }
